code25_all/python/1077347.txt
print "Hello, World!" 

  File "hello.py", line 1
    print "Hello, World!"
                        ^
SyntaxError: invalid syntax

